Added Few Things
Added Download Button and Portfolio Link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <!-- Own -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon-qr.png">
@@ -23,6 +23,12 @@
             <img src="" id="qrImage">
         </div>
         <button onclick="generateQR()">Generate QR Code</button>
+        <a id="download" style="background: #58ed62; color: #000; text-decoration: none;" target="_blank">
+            Download QR Code
+        </a>
+    </div>
+    <div class="portfolio">
+        <a target="_blank" href="https://syedhamza6448.github.io/Portfolio/">Visit Portfolio</a>
     </div>
     <script src="script.js"></script>
 </body>
